Fix laser rotation/target indicator and prevent cat overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -323,6 +323,16 @@ input:focus-visible {
   box-shadow: inset 0 0 0 1px rgb(145 180 236 / 24%);
 }
 
+
+.laser-target-dot {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #ff4b4b;
+  box-shadow: 0 0 0 2px rgb(255 85 85 / 22%), 0 0 9px rgb(255 82 82 / 75%);
+}
+
 .facility-icon {
   width: 72%;
   height: 72%;
